--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 TestMac.xcodeproj/xcuserdata/a1.xcuserdatad/xcschemes/xcschememanagement.plist
 TestMac.xcworkspace/xcuserdata/a1.xcuserdatad/xcschemes/xcschememanagement.plist
+TestMac.xcodeproj/xcuserdata/a1.xcuserdatad/xcschemes/xcschememanagement.plist~master
+TestMac.xcworkspace/xcuserdata/a1.xcuserdatad/xcschemes/xcschememanagement.plist~master
